[gd_scene load_steps=6 format=3 uid="uid://b1rgxoom5s4tl"]

[ext_resource type="Script" path="res://menu.gd" id="1_iiosr"]
[ext_resource type="Texture2D" uid="uid://csdsnfhoytkyj" path="res://assets/button.png" id="3_m32up"]

[sub_resource type="AtlasTexture" id="AtlasTexture_utsr6"]
atlas = ExtResource("3_m32up")
region = Rect2(1, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqu62"]
atlas = ExtResource("3_m32up")
region = Rect2(34, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_n0irm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_utsr6")
}],
"loop": true,
"name": &"NOTOUCHIE",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqu62")
}],
"loop": true,
"name": &"TOUCHIE",
"speed": 120.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_right = 17.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.68)
script = ExtResource("1_iiosr")
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 205.0
offset_right = 632.0
offset_bottom = 348.0
scale = Vector2(0.901676, 0.594642)

[node name="StartButton" type="AnimatedSprite2D" parent="TextureButton"]
scale = Vector2(8.875, 8.875)
sprite_frames = SubResource("SpriteFrames_n0irm")
animation = &"NOTOUCHIE"

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
